--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
+    "@angular/core": "^6.0.5",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "ajv": "^6.5.1",
+    "ajv-keywords": "^3.2.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "ng2-slim-loading-bar": "^4.0.0",
+    "pg": "^7.4.3",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
