--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "enhanced-resolve": "^4.0.0",
     "express": "^4.16.3",
     "hoek": "^5.0.3",
     "jquery": "^3.3.1",
@@ -54,6 +56,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "codelyzer": "~4.2.1",
     "enhanced-resolve": "^4.0.0",
     "jasmine-core": "~2.99.1",
